--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dailyselfie.app"
+    package="nauta42.selfies"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,14 +9,15 @@
         android:targetSdkVersion="21" />
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+	<uses-permission android:name="nauta42.selfies.provider.SELFIES_PERM"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="dailyselfie.app.SelfieActivity"
+            android:name="nauta42.selfies.SelfieListActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait">
