--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,25 +7,37 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="nauta42.selfies.provider.SELFIES_PERM"/>
-    
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="nauta42.selfies.provider.SELFIES_PERM" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="nauta42.selfies.SelfieListActivity"
-            android:label="@string/app_name"
+            android:name=".SelfieListActivity"
             android:configChanges="orientation|screenSize"
-            android:screenOrientation="portrait">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".SelfieDetailActivity"
+            android:label="@string/title_activity_selfie_detail"
+            android:parentActivityName=".SelfieListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nauta42.selfies.SelfieListActivity" />
         </activity>
     </application>
 
